app/assets/stylesheets/_home-default.scss
.container {
  .header {
    .logo {
      @include size (240 auto);
      margin: $center;
      margin-top: 140px;
      @include animation(fadeIn 1.0s ease-in);
    }
    .intro-text {
      font-size: 35px;
      color: $white;
      text-align: center;
      margin-top: 70px;
      text-shadow: 1px 2px 3px black;
      @include animation(fadeIn 1.0s ease-in);
      @include animation-fill-mode(both);
      @include animation-delay(0.5s);
      font-weight: 100;
    }
  }
  .enter-search {
    margin-top: 70px;
    background: image-url('search-background.png') repeat top left;
    border: 1px solid black;
    border-radius: 5px;
    @include animation(fadeIn 1.0s ease-in);
    @include animation-fill-mode(both);
    @include animation-delay(0.5s);
    .search-criteria {
      float: left;
      border-right: 1px solid #021214;
      border-left: 1px solid #424C43;
      padding: 20px;
      .field {
        float: left;
        &.to {
          padding-left: 10px;
          padding-right: 10px;
          color: #CACFCE;
          font-size: 12px;
          padding-top: 12px;
        }
        input {
          @include size (113 auto);
          padding: 10px 0px 10px 35px;
          background: image-url('calendar-icon.png') no-repeat left #fff;
          opacity: 0.9;
          font-size: 13px;
          color: #8A8B89;
        }
      }
      h3 {
        font-size: 18px;
        color: #FFE7D2;
        font-weight: lighter;
        text-shadow: 1px 2px 3px black;
        padding-bottom: 15px;
      }
    }
    .first {
      border-left: none;
    }
    .selection {
      width: 200px;
      background-color: black;
      margin-top: 15px;
      cursor: pointer;
    }
    .chzn-drop {
      margin-top: 15px;
      border-radius: 5px;
      box-shadow: 0px 4px 10px black;
      border: none;
    }
    .chzn-search {
      display: none;
    }
    .no-border {
      border: none;
    }
    .last-box {
        border-right: none;
      }
  }
}
.chzn-container .chzn-results {
  text-transform: uppercase;
  font-size: 13px;
  color: #6F7171;
  margin: 0;
  margin-top: 10px;
  margin-bottom: 10px;
  padding: 0;
    li {
      padding: 8px 15px;
    }
    .highlighted {
      background: #BDC0C0 !important;
      color: #5E6060;
    }
}
.chzn-container-active.chzn-with-drop .chzn-single {
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
}
.footer, .push {
  background: image-url('search-background.png') repeat top left;
  padding-top: 10px;
  padding-bottom: 10px;
  border-top: 1px solid black;
  font-size: 13px;
  color: #fff;
  height: 15px;
  .copyright {
    float: left;
    padding-left: 20px;
  }
  .thoughtbot {
    float: right;
    padding-right: 20px;
    a {
      color: #C72510;
      text-decoration: none;
    }
  }
}
.chzn-container-multi .chzn-choices {
  border: none;
  border-radius: 5px;
  padding: 8px 0;
  @include linear-gradient(#E8E8E6, #fff);
  opacity: .9;
  cursor: pointer;
  background: image-url('caret.png') no-repeat right white;
  .search-choice {
    display: none;
  }
  .search-field {
    padding-left: 10px;
    cursor: pointer;
  }
}

